--- a/flower.html
+++ b/flower.html
@@ -314,7 +314,7 @@
     <div class="audio">
   
 
-    <audio controls autoplay>
+    <audio autoplay>
       <source src="horse.ogg" type="audio/ogg">
       <source src="nadhif basalamah - penjaga hati (Lirik⧸Lyrics) Musik.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
